# SimEnterprise

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Makefile  PLAN.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: adversary.md  implementer.md  quick-reviewer.md  spec-architect.md
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml  eval-keyed.yml
apps/graph-explorer/: .gitignore  README.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
apps/graph-explorer/scripts/: build-sidecar.mjs
apps/graph-explorer/src/main/: index.ts  lenses.ts
apps/graph-explorer/src/preload/: index.ts
apps/graph-explorer/src/renderer/: App.tsx  constants.ts  cy-ext.d.ts  env.d.ts  index.html  main.tsx  rpc.ts  store.ts  styles.css
apps/graph-explorer/src/renderer/components/: ChatPanel.tsx  DetailsPanel.tsx  DiffPanel.tsx  GraphView.tsx  Legend.tsx  QueryConsole.tsx  SearchPanel.tsx  TimeScrubber.tsx
apps/graph-explorer/src/shared/: agent-events.ts  lenses.ts  model.ts  protocol.ts
apps/graph-explorer/src/sidecar/: index.ts
apps/graph-explorer/src/sidecar/agent/: harness.ts  tools.ts
apps/graph-explorer/src/sidecar/graph/: diff.ts  index.ts  kuzu.ts  loader.ts  rdf.ts
apps/graph-explorer/tests/: agent.test.ts  diff.test.ts  helpers.ts  index.test.ts  kuzu.test.ts  lenses.test.ts  loader.test.ts  rdf.test.ts  rpc.test.ts  smoke.test.ts
benchmark/runners/: rag.py
docs/: BENCHMARK.md  DEVELOPMENT.md  GOLDEN_RUN.md  RECONSTRUCT.md
enterprise_sim/: __init__.py  cli.py
enterprise_sim/archetypes/: __init__.py  _base.py  engineering.py  retail.py
enterprise_sim/assembly/: __init__.py  corpus.py  manifest.py  runner.py  validation.py
enterprise_sim/authoring/: __init__.py  eval.py  lint.py  lowering.py  patterns.py  sdk.py  testkit.py
enterprise_sim/benchmark/: __init__.py  fixtures.py  generate.py  report.py  schema.py  score.py
enterprise_sim/benchmark/runners/: __init__.py  engines.py  graph_agent.py  projection.py  rag.py  reference.py
enterprise_sim/core/: __init__.py
enterprise_sim/core/config/: __init__.py  loader.py  models.py  seed.py
enterprise_sim/core/events/: __init__.py  event.py  journal.py
enterprise_sim/core/llm/: __init__.py  backends.py  cache.py  client.py  pricing.py  prompt.py  types.py
enterprise_sim/core/registry/: __init__.py  binding.py  discovery.py  plugins.py  registry.py
enterprise_sim/core/sim/: __init__.py  busy_map.py  calendar.py  clock.py  event_queue.py  resolver.py  scheduler.py  spec.py
enterprise_sim/core/world/: __init__.py  graph.py
enterprise_sim/exporters/: __init__.py  bundle.py  jsonl.py  neo4j.py  registry.py  schema.py
enterprise_sim/playbooks/: __init__.py  build_software.py  sell_merchandise.py
enterprise_sim/processes/: __init__.py  inventory.py  purchase_order.py
enterprise_sim/producers/: __init__.py  artifact.py  calendar_ics.py  email_eml.py  grounding.py  jira.py  markdown.py  outlook.py  pptx.py  word.py  word_docx.py  word_ooxml_spike.py
enterprise_sim/reconstruct/: __init__.py  attribution.py  baseline.py  build.py  chunk.py  e2e.py  extract.py  fidelity.py  model_sweep.py  ontology.py  resolve.py  scale.py  schema.py  structural.py  sweep.py
enterprise_sim/world_builders/: __init__.py  builder.py  markdown.py  names.py
evals/baselines/: golden-fake.json  matrix-fake.json
examples/: demo.toml  golden.toml
scripts/: bedrock_smoke.py  gate.sh  import_smoke.py  reconstruct_eval.sh
skills/author-playbook/: README.md  SKILL.md
specs/: 0001-bedrock-first-class.md  0002-local-testing-hardening.md  0003-e2e-eval-hardening.md  README.md  ROADMAP.md  TEMPLATE.md
tests/: __init__.py  conftest.py  llm_stubs.py  test_archetypes.py  test_authoring_sdk.py  test_backend_contract.py  test_benchmark_generate.py  test_benchmark_graph_runner.py  test_benchmark_keyless.py  test_benchmark_leaderboard.py  test_benchmark_rag.py  test_benchmark_report.py  test_benchmark_scaffold.py  test_benchmark_score.py  test_config.py  test_eval.py  test_events.py  test_exporters.py  test_golden_run.py  test_lint.py  test_llm.py  test_llm_cassettes.py  test_llm_sdk_path.py  test_lowering.py  test_producer_grounding.py  test_producer_jira.py  test_producer_markdown.py  test_producer_outlook.py  test_producer_pptx.py  test_producer_word.py  test_reconstruct_baseline.py  test_reconstruct_build.py  test_reconstruct_chunk.py  test_reconstruct_e2e.py  test_reconstruct_eval_script.py  test_reconstruct_extract.py  test_reconstruct_fidelity.py  test_reconstruct_model_sweep.py  test_reconstruct_reason.py  test_reconstruct_report.py  (+20 more)
tests/conformance/: __init__.py  test_conformance.py  test_playbook_conformance.py
tests/playbooks/: __init__.py  test_build_software_playbook.py  test_reference_playbooks.py  test_sell_merchandise.py
tests/playbooks/golden/: adverse_event_report.jsonl  build_software.jsonl  build_software_design_review.jsonl  run_clinical_study.jsonl  sell_merchandise.jsonl  sell_merchandise_weekly_review.jsonl
