[project]
name = "enterprise-sim"
version = "0.1.0"
description = "Extensible enterprise + artifact simulator that emits a corpus with a gold knowledge graph"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "pydantic>=2.6",
    "python-pptx>=1.0",
]

[project.scripts]
enterprise-sim = "enterprise_sim.cli:main"

[project.optional-dependencies]
# The KG-QA graph runner (esim-uzc.4): embedded Cypher/SPARQL engines plus the
# Claude agent that reasons over them. The engines (kuzu, pyoxigraph) are needed
# to run the keyless engine tests; claude-agent-sdk only to run the agent.
bench = [
    "kuzu>=0.11",
    "pyoxigraph>=0.5",
    "claude-agent-sdk>=0.1",
]
dev = [
    "mypy>=1.9",
    "pytest>=8.0",
    "ruff>=0.4",
    # The engine layer is exercised keyless by the test suite, so it ships here.
    "kuzu>=0.11",
    "pyoxigraph>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["enterprise_sim"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["enterprise_sim", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "W",   # pycodestyle warnings
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_reexport = true
files = ["enterprise_sim", "tests"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
