[project]
name = "enterprise-sim"
version = "0.1.0"
description = "Extensible enterprise + artifact simulator that emits a corpus with a gold knowledge graph"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "pydantic>=2.6",
    "python-pptx>=1.0",
]

[project.scripts]
enterprise-sim = "enterprise_sim.cli:main"

[project.optional-dependencies]
# The real-LLM evaluation extra: everything needed to actually RUN (not just
# keyless-test) the agent/LLM paths — `reconstruct build --backend anthropic_api`,
# `reconstruct reason`, `bench run --runner graph`, and the RAG runner.
#   * kuzu / pyoxigraph — the embedded Cypher/SPARQL engines (also in `dev`, since
#     the keyless engine tests exercise them).
#   * claude-agent-sdk — the graph-agent runner's `import claude_agent_sdk`.
#   * anthropic — the official SDK the `anthropic_api`/`bedrock` backends
#     (core/llm) import lazily; the RAG runner and reconstruct build need it.
# Both SDKs are imported lazily, so `--extra dev` alone stays keyless-green; you
# need `--extra bench` to run the real paths. The CI import-smoke installs this
# extra so a missing runtime dep here fails the build (scripts/import_smoke.py).
bench = [
    "kuzu>=0.11",
    "pyoxigraph>=0.5",
    "claude-agent-sdk>=0.1",
    "anthropic>=0.40",
]
dev = [
    "mypy>=1.9",
    "pytest>=8.0",
    "ruff>=0.4",
    # The engine layer is exercised keyless by the test suite, so it ships here.
    "kuzu>=0.11",
    "pyoxigraph>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["enterprise_sim"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["enterprise_sim", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "W",   # pycodestyle warnings
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_reexport = true
files = ["enterprise_sim", "tests"]

[[tool.mypy.overrides]]
# The Claude Agent SDK ships no type stubs; the graph-agent runner is an
# optional (gated) component that wires its untyped @tool decorators.
module = "claude_agent_sdk.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "enterprise_sim.benchmark.runners.graph_agent"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
